// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/riw/app/translate/findTranslations 01 nothing gets nothing 1`] = `
Object {
  "locale": Object {},
  "todos": Array [],
}
`;

exports[`lib/riw/app/translate/findTranslations 02 no db: md misses 1`] = `
Object {
  "locale": Object {
    "en-aa": Object {
      "md1": "a",
    },
  },
  "todos": Array [
    Object {
      "defaultMessage": "a",
      "file": "/a.js",
      "id": "md1",
      "locale": "en-up",
    },
  ],
}
`;

exports[`lib/riw/app/translate/findTranslations 03 db missing target locale: md ignored 1`] = `
Object {
  "locale": Object {
    "en-aa": Object {
      "md1": "a",
    },
  },
  "todos": Array [],
}
`;

exports[`lib/riw/app/translate/findTranslations 04 db has missing defaultMessage: md misses 1`] = `
Object {
  "locale": Object {
    "en-aa": Object {
      "md1": "a",
    },
  },
  "todos": Array [
    Object {
      "defaultMessage": "a",
      "description": "a desc",
      "file": "/a.js",
      "id": "md1",
      "locale": "en-up",
    },
  ],
}
`;

exports[`lib/riw/app/translate/findTranslations 05 db has missing defined string description: md misses 1`] = `
Object {
  "locale": Object {
    "en-aa": Object {
      "md1": "a",
    },
  },
  "todos": Array [
    Object {
      "defaultMessage": "a",
      "description": "a desc",
      "file": "/a.js",
      "id": "md1",
      "locale": "en-up",
    },
  ],
}
`;

exports[`lib/riw/app/translate/findTranslations 06 db has missing defined object description: md misses 1`] = `
Object {
  "locale": Object {
    "en-aa": Object {
      "md1": "a",
    },
  },
  "todos": Array [
    Object {
      "defaultMessage": "a",
      "description": Object {
        "blah": "foo",
      },
      "file": "/a.js",
      "id": "md1",
      "locale": "en-up",
    },
  ],
}
`;

exports[`lib/riw/app/translate/findTranslations 07 db has missing locale: md misses 1`] = `
Object {
  "locale": Object {
    "en-aa": Object {
      "md1": "a",
    },
  },
  "todos": Array [
    Object {
      "defaultMessage": "a",
      "description": "a desc",
      "file": "/a.js",
      "id": "md1",
      "locale": "en-up",
    },
  ],
}
`;

exports[`lib/riw/app/translate/findTranslations 08 match works - string description 1`] = `
Object {
  "locale": Object {
    "en-aa": Object {
      "md1": "a",
    },
    "en-up": Object {
      "md1": "A",
    },
  },
  "todos": Array [],
}
`;

exports[`lib/riw/app/translate/findTranslations 09 match works - object description 1`] = `
Object {
  "locale": Object {
    "en-aa": Object {
      "md1": "a",
    },
    "en-up": Object {
      "md1": "A",
    },
  },
  "todos": Array [],
}
`;

exports[`lib/riw/app/translate/findTranslations 10 match works - no description 1`] = `
Object {
  "locale": Object {
    "en-aa": Object {
      "md1": "a",
    },
    "en-up": Object {
      "md1": "A",
    },
  },
  "todos": Array [],
}
`;

exports[`lib/riw/app/translate/findTranslations 11 match works - undefined description 1`] = `
Object {
  "locale": Object {
    "en-aa": Object {
      "md1": "a",
    },
    "en-up": Object {
      "md1": "A",
    },
  },
  "todos": Array [],
}
`;

exports[`lib/riw/app/translate/findTranslations 12 simple multi 1`] = `
Object {
  "locale": Object {
    "en-aa": Object {
      "md1": "a1",
      "md2": "c1",
      "md3": "a1",
    },
    "en-ne": Object {
      "md1": "1A",
    },
    "en-up": Object {
      "md1": "A1",
      "md2": "C1",
      "md3": "A1 DESC",
    },
  },
  "todos": Array [
    Object {
      "defaultMessage": "c1",
      "file": "/c.js",
      "id": "md2",
      "locale": "en-ne",
    },
    Object {
      "defaultMessage": "a1",
      "description": "a1 desc",
      "file": "/a.js",
      "id": "md3",
      "locale": "en-ne",
    },
  ],
}
`;
